MDEV-17885 TRUNCATE on temporary table causes ER_GET_ERRNO

ha_innobase::truncate(): Because CREATE TEMPORARY TABLE
allows invalid table options when innodb_file_per_table=1,
do allow them also in TRUNCATE for temporary tables.